<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Full name:IYIOLA OLUWASEUN DANIEL</string>
    <string name="hello_second_fragment">Slack Username:Codebeast</string>
    <string name="toast_button_text">Exit</string>
    <string name="hello_fourth_fragment">Track:MOBILE TRACK\nCourses:JAVA,KOTLIN,FLUTTER</string>
    <string name="hello_third_fragment">Email: holuwaseun50@gmail.com</string>
    <string name="hello_fifth_fragment">BASIC INFORMATION</string>
</resources>
